Fixed unvisible side

--- a/src/styles/prdec.scss
+++ b/src/styles/prdec.scss
@@ -1,5 +1,4 @@
 *{
-    overflow-x: hidden; 
     margin: 0;
 }
 body {
@@ -14,21 +13,23 @@ body {
 }
 
 .primedec {
+    margin-left: -4px;
     width: 80%;
     display: grid;
     grid-gap: 30px;
-    grid-template-columns: repeat(auto-fit, minmax(248px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-auto-rows: minmax(auto, 1fr);
+    margin-top: 4vw;
 }
-    .duties {
+.duties {
+    width: 100%;
+    border-radius: 10px;
+    padding: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    img {
         width: 100%;
-        border-radius: 10px;
-        padding: 8px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        img {
-            width: 100%;
-        }
     }
+}
 
 .name{
     font-family: 'Courier New', Courier, monospace;
@@ -43,54 +44,127 @@ body {
 .items-quantity-cont,
 .cont-items-basket{
     display: flex;
-    margin: 1vw 0 0 1vw;
+    margin-left: 1vw;
 }
 .cont-items-basket{
     margin: 0;
+    justify-content: space-between;
+    margin-top: 1vw;
 }
-.price {
+.price,
+.quantity,
+#som{
     font-family: Roboto, sans-serif;
     font-size: 1.7vw;
     font-weight: 700;
 }
 .quantity {
-    font-family: Roboto, sans-serif;
-    font-size: 1.7vw;
-    font-weight: 700;
     margin-left: 1vw;
 }
 #som{
-    font-family: Roboto, sans-serif;
-    font-size: 1.7vw;
-    font-weight: 700;
     color: rgb(119, 119, 119);
     margin-left: 0.5vw;
 }
 .items-quantity-cont button {
     background-color: #f0f0f0;
     border: none;
-    padding: 4px 10px;
+    padding: 0.5vw 1vw;
     font-size: 16px;
     cursor: pointer;
 }
-
 .items-quantity-cont button:first-child {
     border-radius: 5px 0 0 5px;
 }
-
 .items-quantity-cont button:last-child {
     border-radius: 0 5px 5px 0;
 }
 
-.items-quantity-cont p {
+.items-quantity-cont .count-p {
     margin: 0 10px; 
     font-size: 1.4vw;
+    font-family: Roboto, sans-serif;
+}
+.items-quantity-cont {
+    display: flex;
+    align-items: center;
+}
+.basket-btn{
+    background-color: rgb(42, 83, 115);
+    border-radius: 0.3vw;
+    border: none;
+    padding: 0.5vw 1.2vw;
+    color: #fff;
+    font-size: 1vw;
+    font-family: Roboto, sans-serif;
+}
+.basket-btn:hover{
+    background-color: darken(rgb(42, 83, 115), 10%);
+    border-radius: 0.2vw;
 }
 
-
 @media screen and (max-width: 340px) {
-
-
+    
+    .primedec {
+        width: 80%;
+        grid-gap: 20px;
+        margin-top: 4vw;
+        margin-left: -8px;
+    }
+    .duties {
+        border-radius: 10px;
+        padding: 8px;
+    }
+    .name{
+        font-size: 7vw;
+        font-weight: 600;
+        margin: 1vw;
+    }
+    .price-cont,
+    .items-quantity-cont{
+        margin: 1vw 0 0 1vw;
+    }
+    .cont-items-basket{
+        display: flex;
+        justify-content: space-between;
+    }
+    .price {
+        font-size: 6vw;
+    }
+    .quantity {
+        font-size: 1.7vw;
+        margin-left: 1vw;
+    }
+    #som{
+        font-size: 6vw;
+        margin-left: 0.5vw;
+    }
+    .items-quantity-cont button {
+        border: none;
+        padding: 4px 10px;
+        font-size: 4vw;
+        cursor: pointer;
+        margin-top: 2vw
+    }
+    
+    .items-quantity-cont button:first-child {
+        border-radius: 5px 0 0 5px;
+    }
+    
+    .items-quantity-cont button:last-child {
+        border-radius: 0 5px 5px 0;
+    }
+    
+    .items-quantity-cont .count-p {
+        margin: 0 10px; 
+        font-size: 6vw;
+    }
+    .items-quantity-cont {
+        display: flex;
+        align-items: center;
+    }
+    .items-quantity-cont {
+        margin-top: 2vw;
+    }
 }
 
 @media screen and (min-width: 340px) and (max-width: 768px) {
